Fix alignment for uploaded media
Uploaded videos and now also audio files match iframe embeds. Audio
files get an extra override to stop them showing up as video-sized
boxes.

--- a/src/scss/global/_structure.scss
+++ b/src/scss/global/_structure.scss
@@ -9,16 +9,22 @@ body {
     margin: 25em auto 0 auto;
     width: 666px;
 
-    iframe {
-        width: 660px !important;
-        height: 370px !important;
-        max-width: 100%;
-        max-height: 56.25vw !important;
-        display: block;
+    iframe,
+    .wp-video
+    {
+        width: 660px !important;        // Override WP inline styles
+        height: 370px !important;       // Override WP inline styles
+        max-width: 100%;                // Prevent overflow
+        max-height: 56.25vw !important; // Maintain 16:9 aspect
+        display: block;                 // iframes need blocking to center
         margin-left: auto;
         margin-right: auto;
     }
 
+    .wp-audio-shortcode {
+        @extend .wp-video;              // Inherit video styles
+        height: 40px !important;        // Override video styles
+    }
 }
 
 @media screen and (max-width: 660px) {
